--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "release-it": {
     "git": {
+      "changelog": "git log --pretty=format:'* %s (%h)' [REV_RANGE]",
       "tagName": "v${version}"
     },
     "github": {
