--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha src/tests",
     "package": "pkg ./src/nova.js --out-path lib --targets linux,macos,win --public && echo \"Successfully compiled\"",
-    "release": "npm run package; cd lib; release-it"
+    "release": "npm run package; release-it; github-release list --owner dan-online --repo Nova --tag `node -e \"console.log('v' + require('./package.json').version)\"` --name `node -e \"console.log('v' + require('./package.json').version)\"` ./lib/nova-linux ./lib/nova-macos ./lib/nova.exe"
   },
   "pkg": {
     "scripts": "src/**/*.js",
@@ -15,6 +15,7 @@
   "author": "DanCodes <dan@dancodes.online>",
   "license": "MIT",
   "devDependencies": {
+    "github-release-cli": "^1.3.1",
     "mocha": "^6.2.2",
     "pkg": "^4.4.0",
     "release-it": "^12.4.3"
