--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "nova-node",
+  "name": "nova",
   "version": "1.0.1",
   "description": "",
   "main": "src/nova.js",
   "scripts": {
     "test": "mocha src/tests",
     "package": "pkg ./src/nova.js --out-path lib --targets linux,macos,win --public && echo \"Successfully compiled\"",
-    "release": "npm run package; release-it; github-release list --owner dan-online --repo Nova --tag `node -e \"console.log('v' + require('./package.json').version)\"` --name `node -e \"console.log('v' + require('./package.json').version)\"` ./lib/nova-linux ./lib/nova-macos ./lib/nova.exe"
+    "release": "npm run package; release-it; npm run upload",
+    "upload": "github-release upload --owner dan-online --repo Nova --tag `node -e \"console.log('v' + require('./package.json').version)\"` --name `node -e \"console.log('v' + require('./package.json').version)\"` ./lib/nova-linux ./lib/nova-macos ./lib/nova-win.exe"
   },
   "pkg": {
     "scripts": "src/**/*.js",
