--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@nova-org/cli",
-  "version": "1.1.0",
+  "name": "cli-nova",
+  "version": "1.1.1",
   "description": "",
   "main": "src/nova.js",
   "scripts": {
     "test": "mocha src/tests",
-    "postinstall": "node src/install.js",
+    "postinstall": "npm run package; node src/install.js",
     "package": "pkg ./src/nova.js --out-path lib --targets linux,macos,win --public && echo \"Successfully compiled\"",
-    "release": "npm run package; release-it; npm run upload",
+    "release": "npm run package; release-it; npm run upload; npm publish",
     "upload": "github-release upload --owner dan-online --repo Nova --tag `node -e \"console.log('v' + require('./package.json').version)\"` --name `node -e \"console.log('v' + require('./package.json').version)\"` ./lib/nova-linux ./lib/nova-macos ./lib/nova-win.exe"
   },
   "pkg": {
