--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.DS_Store
 node_modules
-lib/nova-macos
-lib/nova-win
-lib/nova-linux
+./lib/nova-macos
+./lib/nova-win.exe
+./lib/nova-linux
+.DS_Store
