--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.1.9",
   "description": "",
   "main": "src/nova.js",
+  "homepage": "https://github.com/dan-online/Nova",
+  "bugs": "https://github.com/dan-online/Nova/issues",
   "scripts": {
     "test": "mocha src/tests",
     "preinstall": "node src/install.js",
@@ -14,6 +16,13 @@
     "scripts": "src/**/*.js"
   },
   "author": "DanCodes <dan@dancodes.online>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dan-online/Nova.git"
+  },
+  "engines": {
+    "node": "12"
+  },
   "license": "MIT",
   "devDependencies": {
     "github-release-cli": "^1.3.1",
