--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "debug": "^4.1.1",
     "download-github-release": "^0.3.2",
-    "file-system": "^2.2.2"
+    "file-system": "^2.2.2",
+    "safe-eval": "^0.4.1"
   }
 }
