--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "github-release-cli": "^1.3.1",
     "mocha": "^6.2.2",
     "pkg": "^4.4.0",
-    "release-it": "^12.4.3"
+    "release-it": "^12.4.3",
+    "debug": "^4.1.1",
+    "safe-eval": "^0.4.1"
   },
   "bin": {
     "nova": "./lib/nova"
@@ -79,10 +81,7 @@
     "novascript"
   ],
   "dependencies": {
-    "debug": "^4.1.1",
     "download-github-release": "^0.3.2",
-    "file-system": "^2.2.2",
-    "js-spring": "^3.2.3",
-    "safe-eval": "^0.4.1"
+    "file-system": "^2.2.2"
   }
 }
