--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-nova",
-  "version": "1.3.1",
+  "version": "1.3.2-beta",
   "description": "",
   "main": "src/nova.js",
   "homepage": "https://github.com/dan-online/Nova",
