--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preinstall": "node src/install.js --preinstall",
     "package": "pkg ./src/nova.js --out-path lib --targets linux,macos,win --public && echo \"Successfully compiled\"",
     "release": "npm run package; release-it; npm run upload; npm publish",
+    "pre-release": "npm run package; release-it; npm run upload;",
     "upload": "github-release upload --owner dan-online --repo Nova --tag `node -e \"console.log('v' + require('./package.json').version)\"` --name `node -e \"console.log('v' + require('./package.json').version)\"` ./lib/nova-linux ./lib/nova-macos ./lib/nova-win.exe"
   },
   "pkg": {
